FullQa New/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>ERP_1_Type__c</fullName>
        <description>ERP 1 Type is for partner qualification. ERP 1 is the most prevalent TYPE of ERP system this partner has installed.</description>
        <label>(Deprecated) ERP 1 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>aACE</fullName>
                </value>
                <value>
                    <fullName>Accounting Seed for Salesforce</fullName>
                </value>
                <value>
                    <fullName>AccountMate</fullName>
                </value>
                <value>
                    <fullName>Accumulus</fullName>
                </value>
                <value>
                    <fullName>Acumatica Cloud ERP</fullName>
                </value>
                <value>
                    <fullName>Agility by DMSi</fullName>
                </value>
                <value>
                    <fullName>Alterity</fullName>
                </value>
                <value>
                    <fullName>Aria Systems</fullName>
                </value>
                <value>
                    <fullName>BizAutomation</fullName>
                </value>
                <value>
                    <fullName>Blackbaud</fullName>
                </value>
                <value>
                    <fullName>BV Commerce</fullName>
                </value>
                <value>
                    <fullName>Cart32</fullName>
                </value>
                <value>
                    <fullName>CMS i5</fullName>
                </value>
                <value>
                    <fullName>Connectwise</fullName>
                </value>
                <value>
                    <fullName>Cyrious</fullName>
                </value>
                <value>
                    <fullName>Datatel</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Know</fullName>
                </value>
                <value>
                    <fullName>eBay ProStores</fullName>
                </value>
                <value>
                    <fullName>Encore by NetSteps</fullName>
                </value>
                <value>
                    <fullName>Epicor</fullName>
                </value>
                <value>
                    <fullName>Epicor 9</fullName>
                </value>
                <value>
                    <fullName>Epicor Avante</fullName>
                </value>
                <value>
                    <fullName>Epicor CRS</fullName>
                </value>
                <value>
                    <fullName>Epicor Enterprise</fullName>
                </value>
                <value>
                    <fullName>Epicor Manage2000</fullName>
                </value>
                <value>
                    <fullName>Epicor ManFact</fullName>
                </value>
                <value>
                    <fullName>Epicor Vantage</fullName>
                </value>
                <value>
                    <fullName>Everest</fullName>
                </value>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>Exact Macola ES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_2_Count__c</fullName>
        <description>This ERP section is for the number of ERP systems a Partner has in their installed base. ERP 2 Type refers to the 2nd most prevalent, so the ERP 2 Count is the total number of ERP 2 installations for this particular office of this particular Partner.</description>
        <label>(Deprecated) ERP 2 Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERP_2_Type__c</fullName>
        <description>ERP 2 Type is for partner qualification. ERP 2 is the 2nd most prevalent TYPE of ERP system this partner has installed.</description>
        <label>(Deprecated) ERP 2 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>aACE</fullName>
                </value>
                <value>
                    <fullName>Accounting Seed for Salesforce</fullName>
                </value>
                <value>
                    <fullName>AccountMate</fullName>
                </value>
                <value>
                    <fullName>AccPac</fullName>
                </value>
                <value>
                    <fullName>Accumulus</fullName>
                </value>
                <value>
                    <fullName>Acumatica Cloud ERP</fullName>
                </value>
                <value>
                    <fullName>Agility by DMSi</fullName>
                </value>
                <value>
                    <fullName>Alterity</fullName>
                </value>
                <value>
                    <fullName>Aria Systems</fullName>
                </value>
                <value>
                    <fullName>Axapta</fullName>
                </value>
                <value>
                    <fullName>BizAutomation</fullName>
                </value>
                <value>
                    <fullName>Blackbaud</fullName>
                </value>
                <value>
                    <fullName>BusinessVision 32</fullName>
                </value>
                <value>
                    <fullName>BV Commerce</fullName>
                </value>
                <value>
                    <fullName>Cart32</fullName>
                </value>
                <value>
                    <fullName>CMS i5</fullName>
                </value>
                <value>
                    <fullName>Connectwise</fullName>
                </value>
                <value>
                    <fullName>Cyrious</fullName>
                </value>
                <value>
                    <fullName>Datatel</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t know</fullName>
                </value>
                <value>
                    <fullName>eBay ProStores</fullName>
                </value>
                <value>
                    <fullName>Encore by NetSteps</fullName>
                </value>
                <value>
                    <fullName>Epicor</fullName>
                </value>
                <value>
                    <fullName>Epicor 9</fullName>
                </value>
                <value>
                    <fullName>Epicor Avante</fullName>
                </value>
                <value>
                    <fullName>Epicor CRS</fullName>
                </value>
                <value>
                    <fullName>Epicor Enterprise</fullName>
                </value>
                <value>
                    <fullName>Epicor Manage2000</fullName>
                </value>
                <value>
                    <fullName>Epicor ManFact</fullName>
                </value>
                <value>
                    <fullName>Epicor Vantage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERP_3_Count__c</fullName>
        <description>This ERP section is for the number of ERP systems a Partner has in their installed base. ERP 3 Type refers to the third most prevalent, so the ERP 3 Count is the total number of ERP 3 installations for this particular office of this particular Partner.</description>
        <label>(Deprecated) ERP 3 Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERP_3_Type__c</fullName>
        <description>ERP 3 Type is for partner qualification. ERP 3 is the 3rd most prevalent TYPE of ERP system this partner has installed.</description>
        <label>(Deprecated) ERP 3 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>aACE</fullName>
                </value>
                <value>
                    <fullName>Accounting Seed for Salesforce</fullName>
                </value>
                <value>
                    <fullName>AccountMate</fullName>
                </value>
                <value>
                    <fullName>Accumulus</fullName>
                </value>
                <value>
                    <fullName>Acumatica Cloud ERP</fullName>
                </value>
                <value>
                    <fullName>Agility by DMSi</fullName>
                </value>
                <value>
                    <fullName>Alterity</fullName>
                </value>
                <value>
                    <fullName>Aria Systems</fullName>
                </value>
                <value>
                    <fullName>BizAutomation</fullName>
                </value>
                <value>
                    <fullName>Blackbaud</fullName>
                </value>
                <value>
                    <fullName>BV Commerce</fullName>
                </value>
                <value>
                    <fullName>Cart32</fullName>
                </value>
                <value>
                    <fullName>CMS i5</fullName>
                </value>
                <value>
                    <fullName>Connectwise</fullName>
                </value>
                <value>
                    <fullName>Cyrious</fullName>
                </value>
                <value>
                    <fullName>Datatel</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Know</fullName>
                </value>
                <value>
                    <fullName>eBay ProStores</fullName>
                </value>
                <value>
                    <fullName>Encore by NetSteps</fullName>
                </value>
                <value>
                    <fullName>Epicor</fullName>
                </value>
                <value>
                    <fullName>Epicor 9</fullName>
                </value>
                <value>
                    <fullName>Epicor Avante</fullName>
                </value>
                <value>
                    <fullName>Epicor CRS</fullName>
                </value>
                <value>
                    <fullName>Epicor Enterprise</fullName>
                </value>
                <value>
                    <fullName>Epicor Manage2000</fullName>
                </value>
                <value>
                    <fullName>Epicor ManFact</fullName>
                </value>
                <value>
                    <fullName>Epicor Vantage</fullName>
                </value>
                <value>
                    <fullName>Everest</fullName>
                </value>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>Exact Macola ES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EZTax_Lead_Source_Detail__c</fullName>
        <label>EZTax Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EZTax_Lead_Source__c</fullName>
        <label>EZTax Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Call in</fullName>
                </value>
                <value>
                    <fullName>Client Referral</fullName>
                </value>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Email Blast</fullName>
                </value>
                <value>
                    <fullName>Employee Referral</fullName>
                </value>
                <value>
                    <fullName>ERP Partner Referral</fullName>
                </value>
                <value>
                    <fullName>Existing Client</fullName>
                </value>
                <value>
                    <fullName>Hoovers</fullName>
                </value>
                <value>
                    <fullName>Industry Referral</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Print Ad</fullName>
                </value>
                <value>
                    <fullName>Prospect Referral</fullName>
                </value>
                <value>
                    <fullName>Purchased Lead List</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Web Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EZTax_Lead_Status__c</fullName>
        <label>EZTax Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Unqualified</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EZTax_Migration_Lead_ID__c</fullName>
        <label>EZTax Migration Lead ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EZTax_Rating__c</fullName>
        <label>EZTax Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_Commerce_Platform__c</fullName>
        <description>The eCommerce platform that an organization uses to host a shopping cart on its website.</description>
        <inlineHelpText>The eCommerce platform that an organization uses to host a shopping cart on its website.</inlineHelpText>
        <label>(Deprecated) E-Commerce Shopping Cart</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3DCart</fullName>
                </value>
                <value>
                    <fullName>AbleCommerce</fullName>
                </value>
                <value>
                    <fullName>Accounting Seed</fullName>
                </value>
                <value>
                    <fullName>Accumulus Commerce</fullName>
                </value>
                <value>
                    <fullName>ActiveSeries/PSMActive</fullName>
                </value>
                <value>
                    <fullName>Adtumbler</fullName>
                </value>
                <value>
                    <fullName>AgoraCart</fullName>
                </value>
                <value>
                    <fullName>Alterity ACCTivate</fullName>
                </value>
                <value>
                    <fullName>Amazon FBA</fullName>
                </value>
                <value>
                    <fullName>Americaneagle.com</fullName>
                </value>
                <value>
                    <fullName>AmeriCommerce</fullName>
                </value>
                <value>
                    <fullName>Apttus</fullName>
                </value>
                <value>
                    <fullName>Ascentium</fullName>
                </value>
                <value>
                    <fullName>Asmilate Macola</fullName>
                </value>
                <value>
                    <fullName>AspDotNetStorefront</fullName>
                </value>
                <value>
                    <fullName>ATG Commerce</fullName>
                </value>
                <value>
                    <fullName>Big Commerce</fullName>
                </value>
                <value>
                    <fullName>BigMachines</fullName>
                </value>
                <value>
                    <fullName>BirdDog</fullName>
                </value>
                <value>
                    <fullName>BrilliantRetail</fullName>
                </value>
                <value>
                    <fullName>BSI eCommerce</fullName>
                </value>
                <value>
                    <fullName>BusinessFlow</fullName>
                </value>
                <value>
                    <fullName>BV Commerce</fullName>
                </value>
                <value>
                    <fullName>Cart32</fullName>
                </value>
                <value>
                    <fullName>Cartweaver</fullName>
                </value>
                <value>
                    <fullName>Celerant</fullName>
                </value>
                <value>
                    <fullName>CMC3 by ebeacon</fullName>
                </value>
                <value>
                    <fullName>CommandRMS</fullName>
                </value>
                <value>
                    <fullName>Commerce on Cloud by IBM</fullName>
                </value>
                <value>
                    <fullName>CommerceV3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>E_commerce__c</fullName>
        <description>Answers the qualifying question:  Does your organization do e-commerce?</description>
        <label>(Deprecated) E-commerce</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EloquaTemporary__c</fullName>
        <label>EloquaTemporary</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Contact_ID__c</fullName>
        <description>Used only by Eloqua user and Marketing team</description>
        <label>Eloqua Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eloqua_Hard_Bounceback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Purpose: Stamped by Eloqua if email has bounced back
Integrated: No 
Change: Level 0
Custodian: Marketing Jessica Davis</description>
        <label>Eloqua Hard Bounceback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eloqua_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates of the lead/contact is Inactive in Eloqua (no engagement in 7 months). Inactive contacts are excluded from general email marketing.</description>
        <inlineHelpText>Indicates of the lead/contact is Inactive in Eloqua (no engagement in 7 months). Inactive contacts are excluded from general email marketing.</inlineHelpText>
        <label>Eloqua Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eloqua_Matched_Account__c</fullName>
        <description>Purpose:Used to identify possible existing SF account matches using domain in Eloqua on leads
Integrated: Yes, populated via eloqua 
Owner: Marketing: Jessica/Heather</description>
        <label>Eloqua Matched Account</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Eloqua_Webinar_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New Leads registered for Webinars but are not to be routed are put into a holding queue until after the event or if they take other action via eloqua. This is needed to stamp the first campaign affiliation which can get lost in Eloqua if the lead is not brought into Salesforce.
Integrated: Used by Eloqua and lead Assignment Rules
Level 0
Heather Bechard</description>
        <label>Eloqua Webinar Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_1_Send_Date__c</fullName>
        <inlineHelpText>Enter the date the 1st touch email was sent</inlineHelpText>
        <label>Email #1 Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_1_Type__c</fullName>
        <label>Email #1 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evolve</fullName>
                </value>
                <value>
                    <fullName>Cart Dropout</fullName>
                </value>
                <value>
                    <fullName>TRL</fullName>
                </value>
                <value>
                    <fullName>Drip</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_2_Send_Date__c</fullName>
        <inlineHelpText>Enter the date 2nd touch email was sent</inlineHelpText>
        <label>Email #2 Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_2_Type__c</fullName>
        <label>Email #2 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evolve</fullName>
                </value>
                <value>
                    <fullName>Cart Dropout</fullName>
                </value>
                <value>
                    <fullName>TRL</fullName>
                </value>
                <value>
                    <fullName>Drip</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_3_Send_Date__c</fullName>
        <inlineHelpText>Enter the date the 3rd touch email was sent</inlineHelpText>
        <label>Email #3 Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_3_Type__c</fullName>
        <label>Email #3 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evolve</fullName>
                </value>
                <value>
                    <fullName>Cart Dropout</fullName>
                </value>
                <value>
                    <fullName>TRL</fullName>
                </value>
                <value>
                    <fullName>Drip</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmployeeBand__c</fullName>
        <description>The size of an organization as indicated by DemandBase data.</description>
        <inlineHelpText>The size of an organization as indicated by DemandBase data.</inlineHelpText>
        <label>Employee Band</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Mid-Market</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EnteredAsSuspect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entered as Suspect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entered_Address__c</fullName>
        <label>Entered Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excise_Tax_Division_Industry__c</fullName>
        <label>Excise Tax Division Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airlines</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Coach Fleet</fullName>
                </value>
                <value>
                    <fullName>Commercial Industrial</fullName>
                </value>
                <value>
                    <fullName>Common Carrier</fullName>
                </value>
                <value>
                    <fullName>Concrete</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Equipment Supplier/Mfg</fullName>
                </value>
                <value>
                    <fullName>Food Service</fullName>
                </value>
                <value>
                    <fullName>Fuel Jobber</fullName>
                </value>
                <value>
                    <fullName>Fuel Retail</fullName>
                </value>
                <value>
                    <fullName>Fuel Supplier</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Lubricants</fullName>
                </value>
                <value>
                    <fullName>Marine</fullName>
                </value>
                <value>
                    <fullName>Mining / Aggregates</fullName>
                </value>
                <value>
                    <fullName>Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Private Fleet</fullName>
                </value>
                <value>
                    <fullName>Public Transportation</fullName>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Terminal Operator</fullName>
                </value>
                <value>
                    <fullName>Trading Companies</fullName>
                </value>
                <value>
                    <fullName>Trucking</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Waste</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Excise_Tax_Division_Lead_Source_Most_R__c</fullName>
        <label>Excise Tax Lead Source Most Recent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excise_Tax_Division_Lead_Source__c</fullName>
        <label>Excise Tax Division Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising Campaign</fullName>
                </value>
                <value>
                    <fullName>Article</fullName>
                </value>
                <value>
                    <fullName>Co. Website</fullName>
                </value>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>CSPedia.net</fullName>
                </value>
                <value>
                    <fullName>Customer Referral</fullName>
                </value>
                <value>
                    <fullName>Data.com</fullName>
                </value>
                <value>
                    <fullName>Direct Mail Campaign</fullName>
                </value>
                <value>
                    <fullName>EFN</fullName>
                </value>
                <value>
                    <fullName>FQ Email Campaign</fullName>
                </value>
                <value>
                    <fullName>FQ Event</fullName>
                </value>
                <value>
                    <fullName>FQ Marketing Team (marketing use only)</fullName>
                </value>
                <value>
                    <fullName>FQ White Paper</fullName>
                </value>
                <value>
                    <fullName>Government Entity</fullName>
                </value>
                <value>
                    <fullName>IMTS</fullName>
                </value>
                <value>
                    <fullName>Industry List (excluding tradeshows)</fullName>
                </value>
                <value>
                    <fullName>Internal Co. Referral</fullName>
                </value>
                <value>
                    <fullName>OPIS/STALSBY</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Rolodex</fullName>
                </value>
                <value>
                    <fullName>Sales Line/Email Inquiry</fullName>
                </value>
                <value>
                    <fullName>Support / Operations</fullName>
                </value>
                <value>
                    <fullName>Territory Event</fullName>
                </value>
                <value>
                    <fullName>Tradeshow/Conference</fullName>
                </value>
                <value>
                    <fullName>Unknown Website Visitor</fullName>
                </value>
                <value>
                    <fullName>Web Contact Form</fullName>
                </value>
                <value>
                    <fullName>Web Seminar / Webcast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExemptLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exempt Location New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Tax_Solution__c</fullName>
        <label>Existing Tax Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CCH Rates</fullName>
                </value>
                <value>
                    <fullName>eSales Tax</fullName>
                </value>
                <value>
                    <fullName>Kampdata</fullName>
                </value>
                <value>
                    <fullName>manual</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
                <value>
                    <fullName>Sabrix</fullName>
                </value>
                <value>
                    <fullName>SalesTax Clearing House</fullName>
                </value>
                <value>
                    <fullName>TaxJar</fullName>
                </value>
                <value>
                    <fullName>TaxWare</fullName>
                </value>
                <value>
                    <fullName>Vertex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ext__c</fullName>
        <description>Phone extension</description>
        <inlineHelpText>Phone extension</inlineHelpText>
        <label>Ext.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCC_Type__c</fullName>
        <description>Populated via a data upload from the Communication Team, to provide better detail the of type of Telecom, VOIP, etc company for a given Account
Integrated: No
Owner: Communication: Adam Booth Jira ticket IBST-470</description>
        <label>FCC Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forbes2000__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this company on the Forbes 2000 list?</description>
        <inlineHelpText>Is this company on the Forbes 2000 list?</inlineHelpText>
        <label>(Deprecated) Forbes 2000</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fortune1000__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this company on the Fortune 1000 list?</description>
        <inlineHelpText>Is this company on the Fortune 1000 list?</inlineHelpText>
        <label>Fortune 1000</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>